--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -3,6 +3,7 @@ layout: blog.njk
 title: Wild Peaches
 author: John Peach & Jan De Wilde
 permalink: /
+bodyClass: bg-blue-200 text-blue-900
 ---
 
 A precusor to a blog with a horrific name to boot. Do wild peaches even exist? Very much open to suggestions to get rid of this atrocity.
@@ -10,12 +11,14 @@ A precusor to a blog with a horrific name to boot. Do wild peaches even exist? V
 Here is a listing of current blog posts:
 
 <section class="posts my-6">
-  <ul class="divide-y-2 divide-gray-300">
+  <ul class="divide-y divide-blue-400">
     {% for post in collections.posts %}
 
-    <li class="py-4 text-lg">
-      <a class="no-underline" href="{{ post.url }}">{{ post.data.title }}</a> &middot;
-      <span class="text-gray-600">{{ post.date | dateFormat }}</span>
+    <li class="py-3 text-lg">
+      <a class="no-underline text-blue-900 font-medium" href="{{ post.url }}">
+      <span>{{ post.date | dateFormat }}</span> &middot;
+      {{ post.data.title }}
+      </a> 
     </li>
     
     {% endfor %}
