--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -7,7 +7,7 @@ bodyClass: text-blue-900 bg-blue-100
 ---
 
 <section class="my-6 content-wrapper">
-  <ul class="divide-y divide-blue-400">
+  <ul class="divide-y divide-blue-400 list-none">
     {% for post in collections.posts | reverse %}
 
     <li class="py-3 text-xl">
