--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -6,7 +6,7 @@ permalink: /
 bodyClass: text-blue-900 bg-blue-100
 ---
 
-<section class="my-6 content-wrapper">
+<section class="mt-48 mb-24 content-wrapper">
   <ul class="divide-y divide-blue-400 list-none">
     {% for post in collections.posts | reverse %}
 
