--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -10,7 +10,7 @@ bodyClass: text-blue-900 bg-blue-100
   <ul class="divide-y divide-blue-400 list-none">
     {% for post in collections.posts | reverse %}
 
-    <li class="py-3 text-xl">
+    <li class="py-3 text-xl leading-snug mb-2">
       <a
         class="no-underline text-blue-900 font-medium flex"
         href="{{ post.url }}"
@@ -19,8 +19,9 @@ bodyClass: text-blue-900 bg-blue-100
           >{{ post.date | dateFilter }}</time
         > -->
         <div>
-          {{ post.data.title }} {% if post.data.subtitle %}
-          <div class="text-blue-900 text-opacity-75 text-base">
+          {{ post.data.title }} 
+          {% if post.data.subtitle %}
+          <div class="mt-1 text-blue-900 text-opacity-75 text-base">
             {{ post.data.subtitle }}
           </div>
           {% endif %}
