Add intro on homepage

--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -7,9 +7,13 @@ bodyClass: text-blue-900 bg-blue-50 font-inter
 subClass: text-teal-200 bg-blue-900
 includeSubscription: true 
 ---
-
+ 
 <section class="my-24 stack-l center-l">
-  <h1 class="leading-tighter text-5xl font-inter font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-blue-200">Table of Contents</h1>
+  <h1 class="leading-tighter text-5xl font-inter font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-blue-200 sr-only">Table of Contents</h1>
+
+  <p class="mb-12 text-2xl font-medium">
+    A project blog by two ex-neighbors. John writes about mathematics and related topics. And seemingly unrelated topics. Jan (currently) makes the site.
+  </p>
 
   <ul class="divide-y divide-blue-400 list-none">
     {% for post in collections.posts | reverse %}
