--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -12,7 +12,7 @@ includeSubscription: true
   <h1 class="leading-tighter text-5xl font-inter font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-blue-200 sr-only">Table of Contents</h1>
 
   <p class="mb-12 text-2xl font-medium">
-    A project blog by two ex-neighbors. John writes about mathematics and related topics. And seemingly unrelated topics. Jan (currently) makes the site.
+    A project blog by two ex-neighbors. John writes on mathematics and related topics. And seemingly unrelated topics. Jan (currently) makes the site.
   </p>
 
   <ul class="divide-y divide-blue-400 list-none">
