Social sharing metadata tweaking (#88)
* Social sharing metadata tweaking

* Add dump 11ty filter

* Add socialImg to applicable posts

* Use ndash instead of hypen for pageTitle

* Slack does not pick up on SVG in socialImg

* Optimised images with calibre/image-actions

Co-authored-by: github-actions[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -9,10 +9,10 @@ includeSubscription: true
 ---
  
 <section class="my-24 stack-l center-l">
-  <h1 class="leading-tighter text-5xl font-inter font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-blue-200 sr-only">Table of Contents</h1>
+  <h1 class="leading-tighter text-5xl font-inter font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-blue-200 sr-only">{{ site.name }}</h1>
 
   <p class="mb-12 text-2xl font-medium">
-    A project blog by two ex-neighbors. John writes on mathematics and related topics. And seemingly unrelated topics. Jan (currently) makes the site.
+    {{ site.tagline }}
   </p>
 
   <ul class="divide-y divide-blue-400 list-none">
