--- a/src/_content/confirmed.html
+++ b/src/_content/confirmed.html
@@ -3,10 +3,11 @@ layout: default
 title: Email Subscription Confirmed · Wild Peaches
 author: Jan De Wilde & John Peach
 permalink: /confirmed.html
-bodyClass: text-blue-900 bg-blue-50 font-inter
-subClass: text-teal-200 bg-blue-900 
+bodyClass: text-gray-900 bg-gray-50 font-sans
 eleventyExcludeFromCollections: true
 ---
+
 <section class="my-48 text-center">
-  🥳 Your subscription has been confirmed.
-</section>  
+  <div class="text-5xl">🥳</div>
+  <div class="mt-4">Your subscription has been confirmed.</div>
+</section>
