--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -3,13 +3,12 @@ layout: default
 title: Wild Peaches
 author: Jan De Wilde & John Peach
 permalink: /
-bodyClass: text-gray-800 bg-gray-50 font-inter
-subClass: text-gray-200 bg-gray-800
+bodyClass: text-gray-800 bg-gray-50 font-sans
 includeSubscription: true 
 ---
  
-<section class="my-24 stack-l center-l">
-  <h1 class="leading-tighter text-5xl font-inter font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-gray-200 sr-only">{{ site.name }}</h1>
+<section class="my-24 o-stack o-center">
+  <h1 class="leading-tighter text-5xl font-sans font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-gray-200 sr-only">{{ site.name }}</h1>
 
   <p class="mb-12 text-2xl font-medium max-w-md">
     {{ site.tagline }}
@@ -29,13 +28,13 @@ includeSubscription: true
         <div>
           <div class="font-medium text-xl">{{ post.data.title }}</div>
           {% if post.data.subtitle %}
-          <div class="text-gray-600 text-lg font-inter">
+          <div class="text-gray-600 text-lg font-sans">
             {{ post.data.subtitle }}
           </div>
           {% endif %}
           {#
            {% if post.data.tags %}
-          <div class="text-gray-500 font-inter text-sm">
+          <div class="text-gray-500 font-sans text-sm">
           {% for tag in post.data.tags %}
             #{{ tag }}
           {% endfor %}
