A11y: screen reader improvements homepage

--- a/src/_content/index.html
+++ b/src/_content/index.html
@@ -9,10 +9,10 @@ includeSubscription: true
 
 <main id="main" class="my-24 o-stack o-center">
   <h1 id="toc" class="leading-tighter text-5xl font-sans font-extrabold mb-4 border-l-8 pl-4 -ml-6 border-gray-200 sr-only">
-    Contents {{ site.name }}
+    {{ site.name }} blogposts from latest to oldest
   </h1>
 
-  <p class="mb-12 text-2xl font-medium max-w-md"><span class="sr-only">subtitle:</span>{{ site.tagline }}</p>
+  <p class="mb-12 text-2xl font-medium max-w-md"><span class="sr-only">tagline:</span>{{ site.tagline }}</p>
 
   <nav aria-labelledby="toc">
     <ul class="divide-y divide-gray-400 list-none">
