UI theme refresh (#150)

--- a/src/_content/404.html
+++ b/src/_content/404.html
@@ -2,7 +2,7 @@
 layout: default
 title: Not found!
 permalink: /404.html
-bodyClass: text-gray-900 bg-gray-50 font-sans
+bodyClass: text-primary bg-white
 eleventyExcludeFromCollections: true
 ---
 
