--- a/src/_content/confirmed.html
+++ b/src/_content/confirmed.html
@@ -3,7 +3,7 @@ layout: default
 title: Email Subscription Confirmed · Wild Peaches
 author: Jan De Wilde & John Peach
 permalink: /confirmed.html
-bodyClass: text-gray-900 bg-gray-50 font-sans
+bodyClass: text-primary bg-gray-50 font-sans
 eleventyExcludeFromCollections: true
 ---
 
